@@ -10,10 +10,16 @@ else
 SUBDIRS_CHECK =
 endif
 
+if USE_X
+SUBDIRS_ICLES = icles
+else
+SUBDIRS_ICLES =
+endif
+
 SUBDIRS = 			\
 	$(SUBDIRS_CHECK)	\
 	$(SUBDIRS_EXAMPLES)	\
-	icles
+	$(SUBDIRS_ICLES)
 
 DIST_SUBDIRS = 			\
 	check			\
